Work on frontend components

--- a/Client/src/app/add-new-rule/add-new-rule.component.html
+++ b/Client/src/app/add-new-rule/add-new-rule.component.html
@@ -1,1 +1,9 @@
-<p>add-new-rule works!</p>
+<div fxLayout="row">
+  <div fxLayout="column" fxLayoutGap="100px">
+    <app-facts-list></app-facts-list>
+    <app-code-viewer></app-code-viewer>
+  </div>
+  <div fxLayout="column">
+    <app-text-editor></app-text-editor>
+  </div>
+</div>
