--- a/Client/src/app/add-new-rule/text-editor/text-editor.component.html
+++ b/Client/src/app/add-new-rule/text-editor/text-editor.component.html
@@ -1,4 +1,4 @@
 <mat-form-field>
   <mat-label>Write rules</mat-label>
-  <textarea matInput></textarea>
+  <textarea (keydown)="checkIfTab($event)" matInput [(ngModel)]="rules.rules"></textarea>
 </mat-form-field>
