--- a/Client/src/app/add-new-rule/add-new-rule.component.html
+++ b/Client/src/app/add-new-rule/add-new-rule.component.html
@@ -1,9 +1,10 @@
-<div fxLayout="row">
-  <div fxLayout="column" fxLayoutGap="100px">
-    <app-facts-list></app-facts-list>
+<div fxLayout="row" fxLayoutGap="10%">
+  <div id="left" fxLayout="column" fxLayoutGap="1%">
+    <app-facts-list fxLayoutAlign="center"></app-facts-list>
     <app-code-viewer></app-code-viewer>
   </div>
-  <div fxLayout="column">
-    <app-text-editor></app-text-editor>
+  <div id="right" fxLayout="column">
+    <app-text-editor #editor></app-text-editor>
+    <button mat-raised-button color="primary" (click)="editor.submitRules()">Create rules</button>
   </div>
 </div>
