--- a/Client/src/app/add-new-rule/code-viewer/code-viewer.component.css
+++ b/Client/src/app/add-new-rule/code-viewer/code-viewer.component.css
@@ -1,6 +1,6 @@
 pre {
-  width: 40%;
-  height: 400px;
-  max-height: 400px;
-  overflow: auto;
+  width: 100%;
+  height: 419px;
+  max-height: 419px;
+  overflow: scroll;
 }
