--- a/Client/src/app/recommend/recommend.component.html
+++ b/Client/src/app/recommend/recommend.component.html
@@ -135,7 +135,7 @@
   </mat-step>
 
   <mat-step>
-    <button mat-button>Recommend</button>
+    <button mat-button (click)="recommend()">Recommend</button>
   </mat-step>
 
 </mat-vertical-stepper>
